--- a/ch2/2828.ipynb
+++ b/ch2/2828.ipynb
@@ -36,7 +36,7 @@
     "    if goal > right:\n",
     "        distance += goal - right\n",
     "        left = goal - M\n",
-    "    elif goal < left:\n",
+    "    elif gxoal < left:\n",
     "        distance += left - goal\n",
     "        left = goal\n",
     "print(distance)"
