--- a/swea D3/14413 격자판 칠하기_풀이중.ipynb
+++ b/swea D3/14413 격자판 칠하기_풀이중.ipynb
@@ -32,6 +32,8 @@
     "                possibility = 'impossible'\n",
     "                break\n",
     "            prev = graph[i][j]\n",
+    "        if possibility == 'impossible':\n",
+    "            break\n",
     "    print(f\"#{t} {possibility}\")\n"
    ]
   },
