--- a/swea D3/2806 N-queen.ipynb
+++ b/swea D3/2806 N-queen.ipynb
@@ -33,6 +33,17 @@
     "    print(f'#{tc} {ans}')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_promising(x):\n",
+    "    for i in range(x):\n",
+    "        if i"
+   ]
   }
  ],
  "metadata": {
