--- a/ch2/14502.ipynb
+++ b/ch2/14502.ipynb
@@ -24888,23 +24888,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'graph' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mUntitled-1.ipynb 셀 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:Untitled-1.ipynb?jupyter-notebook#W2sdW50aXRsZWQ%3D?line=0'>1</a>\u001b[0m graph\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'graph' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
      ]
     }
    ],
    "source": [
-    "graph"
+    "from itertools import combinations\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "# def build_wall():\n",
+    "#     newgp = deepcopy(gp)\n",
+    "#     co = []\n",
+    "#     for i in range(n):\n",
+    "#         for j in range(m):\n",
+    "#             if newgp[n][m] == 0:\n",
+    "#                 co.append([n,m])\n",
+    "#     for c in combinations(co,3):\n",
+    "#         newgp[c[0]][c[1]] = 1\n",
+    "#     return newgp\n",
+    "\n",
+    "dy = [0,1,0,-1]\n",
+    "dx = [1,0,-1,0]\n",
+    "\n",
+    "def dfs(y,x):\n",
+    "    if visited[y][x] == 1:\n",
+    "        return\n",
+    "    visited[y][x] = 1\n",
+    "    newgp[y][x] = 2\n",
+    "    for i in range(4):\n",
+    "        ny = y + dy[i]\n",
+    "        nx = x + dx[i]\n",
+    "        if ny < 0 or nx < 0 or ny >= n or nx >= m:\n",
+    "            continue\n",
+    "        if newgp[ny][nx] == 1:\n",
+    "            continue\n",
+    "        dfs(ny,nx)\n",
+    "\n",
+    "n, m = map(int,input().split())\n",
+    "gp = [list(map(int,input().split())) for _ in range(n)]\n",
+    "co = []\n",
+    "mx = 0\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        if gp[i][j] == 0:\n",
+    "            co.append([i,j])\n",
+    "\n",
+    "for c in combinations(co,3):\n",
+    "    newgp = deepcopy(gp)\n",
+    "    newgp[c[0][0]][c[0][1]] = 1\n",
+    "    newgp[c[1][0]][c[1][1]] = 1\n",
+    "    newgp[c[2][0]][c[2][1]] = 1\n",
+    "    visited = [[0]*m for _ in range(n)]\n",
+    "    for i in range(n):\n",
+    "        for j in range(m):\n",
+    "            if newgp[i][j] == 2:\n",
+    "                dfs(i,j)\n",
+    "    cnt = 0\n",
+    "    for i in range(n):\n",
+    "        for j in range(m):\n",
+    "            if newgp[i][j] == 0:\n",
+    "                cnt += 1\n",
+    "    mx = max(mx,cnt)\n",
+    "print(mx)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "visited = [[0]*5 for _ in range(3)]\n",
+    "a = [[1,2],[4,5],[7,8],['a','b'],['c','d']]\n",
+    "for c in combinations(a,3):\n",
+    "    print(c[0][0])"
    ]
   }
  ],
