--- a/ch3/14497 주난의난.ipynb
+++ b/ch3/14497 주난의난.ipynb
@@ -51,22 +51,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#강의풀이\n",
+    "#2개의 queue를 사용하는 배열 탐색하는 레벨을 1을 만날때 하나씩 업시키는 로직\n",
+    "#추가적으로 1차원 배열로 좌표를 표현하는 방법\n",
+    "from collections import deque\n",
+    "\n",
+    "dy = [0,1,0,-1]\n",
+    "dx = [1,0,-1,0]\n",
+    "\n",
+    "n, m = map(int,input().split())\n",
+    "y1,x1,y2,x2 = map(int,input().split())\n",
+    "y1 -= 1\n",
+    "x1 -= 1\n",
+    "y2 -= 1\n",
+    "x2 -= 1\n",
+    "graph = [list(input()) for _ in range(n)]\n",
+    "visited = [[0] * m for _ in range(n)]\n",
+    "cnt = 0\n",
+    "\n",
+    "def bfs(y,x):\n",
+    "    global cnt\n",
+    "    q = deque()\n",
+    "    q.append(1000*y + x)\n",
+    "    graph[y][x] = '0'\n",
+    "    while graph[y2][x2] != '0':\n",
+    "        cnt += 1\n",
+    "        temp = deque() #1을 만났을 때의 좌표를 임시로 저장하는 배열\n",
+    "        while q:\n",
+    "            y = q[0] // 1000\n",
+    "            x = q[0] % 1000\n",
+    "            q.popleft()\n",
+    "            for i in range(4):\n",
+    "                ny = y + dy[i]\n",
+    "                nx = x + dx[i]\n",
+    "                if ny < 0 or nx < 0 or ny >= n or nx >= m or visited[ny][nx]: continue\n",
+    "                visited[ny][nx] = cnt\n",
+    "                if graph[ny][nx] != '0':\n",
+    "                    graph[ny][nx] = '0'\n",
+    "                    temp.append(1000 * ny + nx)\n",
+    "                else:\n",
+    "                    q.append(1000 * ny + nx)\n",
+    "        q = temp\n",
+    "\n",
+    "bfs(y1,x1)\n",
+    "print(visited[y2][x2])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0'"
+       "[[2, 2, 2, 2, 2], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "graph[1][2]"
+    "visited"
    ]
   }
  ],
